--- a/app/src/main/Assets/css/components/drawer.css
+++ b/app/src/main/Assets/css/components/drawer.css
@@ -46,12 +46,12 @@
     font-size: large;
 }
 
-#trackList {
+.listbox {
     list-style-position: inside;
     -webkit-padding-start: 0px;
 }
 
-#trackList li {
+.listbox li {
     padding-bottom: 30px;
     list-style-type: none;
 }
@@ -66,4 +66,8 @@
 
 .trackIcon {
     margin: 0px 10px 10px 10px;
+}
+
+.map.title {
+    margin-left: 50px;
 }
