Catastrophic progress with action bar

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
         <item name="windowActionBar">true</item>
     </style>
 
-    <style name="AppMainTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppMainTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
