Preferences with actionbar and home button

--- a/app/src/main/Assets/css/components/drawer.css
+++ b/app/src/main/Assets/css/components/drawer.css
@@ -1,4 +1,10 @@
-﻿.marker {
+﻿.drawer-container {
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    background-color: red;
+}
+.marker {
     margin-top: 4px;
     opacity: .6;
     position: absolute;
