--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,4 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="navigation_view">
+    <item android:title="@string/main_menu">
+        <menu>
+            <item
+                android:id="@+id/ic_menu_share"
+                android:icon="@drawable/controls"
+                android:title="@string/nav_menu_controls" />
+            <item
+                android:id="@+id/nav_send"
+                android:icon="@drawable/track"
+                android:title="@string/nav_menu_tracks" />
+        </menu>
+    </item>
 </menu>
