--- a/app/src/main/assets/styles/main.css
+++ b/app/src/main/assets/styles/main.css
@@ -19,6 +19,9 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
+}
+
+.displayContainer {
     background: var(--display-body);
 }
 
@@ -73,3 +76,34 @@ body {
     right: 5px;
     z-index: 1000;
 }
+
+.track {
+    padding: 10px;
+
+    position: relative;
+    overflow: hidden;
+    transform: translate3d(0, 0, 0);    
+}
+
+.track:after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+    background-image: radial-gradient(circle, lightblue 10%, transparent 10.01%);
+    background-repeat: no-repeat;
+    background-position: 50%;
+    transform: scale(10, 10);
+    opacity: 0;
+    transition: transform .5s, opacity 1s;
+  }
+
+  .track:active:after {
+    transform: scale(0, 0);
+    opacity: .3;
+    transition: 0s;
+  }
