--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,6 +24,15 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="AppTheme.DisplayFullScreen">
+        <item name="android:textColor">@color/colorDisplayText</item>
+        <item name="android:windowBackground">@color/colorDisplayDark</item>
+        <item name="android:colorBackground">@color/colorDisplayDark</item>
+        <item name="android:background">@color/colorDisplayDark</item>
+        <item name="android:colorEdgeEffect">@color/colorDisplayText</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
