--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,9 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
+    <dimen name="topMargin">32dp</dimen>
+    <dimen name="leftMargin">16dp</dimen>
+    <dimen name="valueTopMargin">16dp</dimen>
+    <dimen name="unitHorizontalMargin">8dp</dimen>
+    <dimen name="unitVerticalMargin">8dp</dimen>
 </resources>
