--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,6 +30,7 @@
         <item name="android:colorBackground">@color/colorDisplayDark</item>
         <item name="android:background">@color/colorDisplayDark</item>
         <item name="android:colorEdgeEffect">@color/colorDisplayText</item>
+        <item name="android:textSize">16sp</item>
         <item name="windowNoTitle">true</item>
     </style>
 
