--- a/app/src/main/res/layout/fragment_display.xml
+++ b/app/src/main/res/layout/fragment_display.xml
@@ -8,7 +8,7 @@
         <import type="android.view.View"/>
         <variable
             name="displayModel"
-            type="eu.selfhost.riegel.superfit.models.DisplayModel" />
+            type="de.uriegel.superfit.models.DisplayModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
