--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -8,7 +8,7 @@
 
     <fragment
         android:id="@+id/fragment"
-        android:name="eu.selfhost.riegel.superfit.ui.MapFragment"
+        android:name="de.uriegel.superfit.ui.MapFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
