--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,7 +9,7 @@
     tools:context=".ui.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <de.uriegel.superfit.ui.ExtendedViewPager
+    <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/layoutContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
