--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,4 +21,14 @@
 
     <style name="Theme.SuperFit.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="Theme.SuperFit.Display">
+        <item name="android:textColor">@color/colorDisplayText</item>
+<!--        <item name="android:windowBackground">@color/colorDisplayDark</item>-->
+        <item name="android:colorBackground">@color/colorDisplayDark</item>
+<!--        <item name="android:background">@color/colorDisplayDark</item>-->
+        <item name="android:colorEdgeEffect">@color/colorDisplayText</item>
+        <item name="android:textSize">16sp</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
 </resources>
