--- a/app/src/main/res/xml/preference.xml
+++ b/app/src/main/res/xml/preference.xml
@@ -17,6 +17,10 @@
             android:title="Radumfang"
             app:dialogMessage="Gib bitte den Rad-Umfang in mm ein"
             app:useSimpleSummaryProvider="true" />
+        <Preference
+            app:dialogMessage="Hier wird der Bike-Sensor gesucht und festgelegt"
+            app:key="PREF_BIKE_SENSOR"
+            app:title="@string/bike_sensor" />
     </PreferenceCategory>
     <PreferenceCategory android:title="Navigation">
         <Preference
