Transformed to map activity, but rendering problems are still present, on Huawai too!

--- a/app/src/main/res/layout/activity_track.xml
+++ b/app/src/main/res/layout/activity_track.xml
@@ -5,19 +5,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.KannWegMapActivity">
+    tools:context=".ui.TrackingActivity">
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragment"
-        android:name="de.uriegel.superfit.ui.MapFragment"
+    <FrameLayout
+        android:id="@+id/map_container"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="1.0"/>
 
     <ImageButton
         android:id="@+id/btnMenu"
@@ -28,7 +27,7 @@
         android:alpha="0.4"
         android:contentDescription="@string/toggle_controls"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/fragment"
+        app:layout_constraintTop_toTopOf="@+id/map_container"
         app:srcCompat="@drawable/menu"
         tools:ignore="ImageContrastCheck" />
 
