--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,7 +20,7 @@
 
     <style name="Theme.SuperFit.Map" parent="Theme.SuperFit">
         <item name="windowNoTitle">true</item>
-        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowFullscreen">true</item>
         <item name="android:windowTranslucentNavigation">true</item>
     </style>
 
@@ -28,12 +28,12 @@
 
     <style name="Theme.SuperFit.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-    <style name="Theme.SuperFit.Display">
+    <style name="Theme.SuperFit.Display" parent="Theme.SuperFit">
         <item name="android:textColor">@color/colorDisplayText</item>
         <item name="android:colorBackground">@color/colorDisplayDark</item>
-        <item name="android:colorEdgeEffect">@color/colorDisplayText</item>
-        <item name="android:textSize">16sp</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
     </style>
 
 </resources>
