--- a/app/src/main/res/layout/fragment_tracks.xml
+++ b/app/src/main/res/layout/fragment_tracks.xml
@@ -9,5 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:scrollbars="vertical"
         tools:listitem="@layout/track" />
 </LinearLayout>
